Create test on email arrival
